.provarCaches/00D410000011HE0EAM/objects/rstkf__gljetempltd__c.object
<CustomObject>
    <description>gljetempltd__c</description>
    <fields>
        <fullName>rstkf__externalid__c</fullName>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>rstkf__formula_extid__c</fullName>
        <formula>rstkf__gljetempltd_gljetemplth__r.rstkf__externalid__c &amp; &apos;_&apos; &amp;  TEXT( rstkf__gljetempltd_lineno__c )</formula>
        <label>Formula External Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__formula_name__c</fullName>
        <formula>rstkf__gljetempltd_gljetemplth__r.rstkf__gljetemplth_templateid__c &amp; &apos; - &apos; &amp;  TEXT( rstkf__gljetempltd_lineno__c )</formula>
        <label>Formula Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__gljetempltd_cramt__c</fullName>
        <label>Credit Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__gljetempltd_dimgridstorage__c</fullName>
        <description>gljetempltd_dimgridstorage__c</description>
        <label>Grid Dimension</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__gljetempltd_dimvals__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Dimensions</label>
        <referenceTo>rstk__dimvals__c</referenceTo>
        <relationshipLabel>General Journal Entry Template Lines</relationshipLabel>
        <relationshipName>gljetempltds</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstkf__gljetempltd_dramt__c</fullName>
        <label>Debit Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__gljetempltd_glacct__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Account</label>
        <referenceTo>rstkf__glacct__c</referenceTo>
        <relationshipLabel>General Journal Entry Template Lines</relationshipLabel>
        <relationshipName>gljetempltds</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstkf__gljetempltd_gldiv__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Division</label>
        <referenceTo>rstkf__gldiv__c</referenceTo>
        <relationshipLabel>General Journal Entry Template Lines</relationshipLabel>
        <relationshipName>gljetempltds</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstkf__gljetempltd_gljetemplth__c</fullName>
        <label>Template</label>
        <referenceTo>rstkf__gljetemplth__c</referenceTo>
        <relationshipLabel>General Journal Entry Template Lines</relationshipLabel>
        <relationshipName>gljetempltds</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>rstkf__gljetempltd_glproj__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Project</label>
        <referenceTo>rstkf__glproj__c</referenceTo>
        <relationshipLabel>General Journal Entry Template Lines</relationshipLabel>
        <relationshipName>gljetempltds</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstkf__gljetempltd_linecomment__c</fullName>
        <label>Comment</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__gljetempltd_lineno__c</fullName>
        <label>Line Number</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__triggeroptions__c</fullName>
        <label>triggeroptions</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <label>General Journal Entry Template Lines</label>
    <listViews>
        <fullName>rstkf__GJ_Entry_Template_Lines_filter</fullName>
        <columns>NAME</columns>
        <columns>rstkf__gljetempltd_gljetemplth__c</columns>
        <columns>rstkf__gljetempltd_lineno__c</columns>
        <columns>rstkf__gljetempltd_glacct__c</columns>
        <columns>rstkf__gljetempltd_dramt__c</columns>
        <columns>rstkf__gljetempltd_cramt__c</columns>
        <columns>rstkf__gljetempltd_gldiv__c</columns>
        <columns>rstkf__gljetempltd_glproj__c</columns>
        <columns>rstkf__gljetempltd_dimvals__c</columns>
        <columns>rstkf__gljetempltd_linecomment__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <label>GJ Entry Template Lines - filter</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>rstkf__RS_General_Journal_Entry_Template_Lines</fullName>
        <columns>NAME</columns>
        <columns>rstkf__gljetempltd_gljetemplth__c</columns>
        <columns>rstkf__gljetempltd_lineno__c</columns>
        <columns>rstkf__gljetempltd_glacct__c</columns>
        <columns>rstkf__gljetempltd_dramt__c</columns>
        <columns>rstkf__gljetempltd_cramt__c</columns>
        <columns>rstkf__gljetempltd_gldiv__c</columns>
        <columns>rstkf__gljetempltd_glproj__c</columns>
        <columns>rstkf__gljetempltd_dimvals__c</columns>
        <columns>rstkf__gljetempltd_linecomment__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>General Journal Entry Template Lines</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>General Journal Entry Template Lines</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>rstkf__Account_must_be_of_same_company</fullName>
        <active>true</active>
        <description>Account must be of same company</description>
        <errorConditionFormula>IF( NOT(ISBLANK(rstkf__gljetempltd_glacct__c)) , rstkf__gljetempltd_glacct__r.rstkf__glacct_cmpno__c != rstkf__gljetempltd_gljetemplth__r.rstkf__gljetemplth_glcmp__c,false)</errorConditionFormula>
        <errorMessage>Account must be of same company of Line.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>rstkf__Account_must_not_be_NULL</fullName>
        <active>true</active>
        <description>Account_must_not_be_NULL</description>
        <errorConditionFormula>ISBLANK(rstkf__gljetempltd_glacct__c)</errorConditionFormula>
        <errorMessage>Please Enter Account</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>rstkf__Amount_can_not_be_entered_as_Journal_Hea</fullName>
        <active>true</active>
        <description>Amount can not be entered as Journal Header Template is of type &apos;Account only&apos;</description>
        <errorConditionFormula>AND(rstkf__gljetempltd_gljetemplth__r.rstkf__gljetemplth_accountsonly__c = TRUE , OR(rstkf__gljetempltd_dramt__c &gt; 0,rstkf__gljetempltd_cramt__c &gt; 0 ) )</errorConditionFormula>
        <errorMessage>Amount can not be entered as Journal Header Template is of type &apos;Account only&apos;</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>rstkf__Amount_need_to_be_entered_as_Journal_Hea</fullName>
        <active>true</active>
        <description>Amount need to be entered as Journal Header Template is of type &apos;Amount Required&apos;</description>
        <errorConditionFormula>AND(rstkf__gljetempltd_gljetemplth__r.rstkf__gljetemplth_amountsreq__c = TRUE , AND( OR(ISBLANK(rstkf__gljetempltd_dramt__c),rstkf__gljetempltd_dramt__c = 0,rstkf__gljetempltd_dramt__c &lt; 0),OR(ISBLANK(rstkf__gljetempltd_cramt__c),rstkf__gljetempltd_cramt__c = 0,rstkf__gljetempltd_cramt__c &lt; 0) ) )</errorConditionFormula>
        <errorMessage>Amount need to be entered as Journal Header Template is of type &apos;Amount Required&apos;</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>rstkf__Division_must_be_of_Same_Company_as_of_G</fullName>
        <active>true</active>
        <description>Division must be of Same Company as of General Journal Entry Template Header.</description>
        <errorConditionFormula>IF( NOT(ISBLANK(rstkf__gljetempltd_gldiv__c)) , 
rstkf__gljetempltd_gldiv__r.rstkf__gldiv_glcmp__c != rstkf__gljetempltd_gljetemplth__r.rstkf__gljetemplth_glcmp__c, false)</errorConditionFormula>
        <errorMessage>Division must be of Same Company as of General Journal Entry Template Header.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>rstkf__Either_Debit_amount_or_Credit_amount_can</fullName>
        <active>true</active>
        <description>Either Debit amount or Credit amount can be filled.</description>
        <errorConditionFormula>AND((rstkf__gljetempltd_dramt__c &gt; 0),(rstkf__gljetempltd_cramt__c &gt; 0))</errorConditionFormula>
        <errorMessage>Either Debit amount or Credit amount can be filled.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>rstkf__External_Id_can_not_be_modified</fullName>
        <active>true</active>
        <description>External_Id_can_not_be_modified</description>
        <errorConditionFormula>AND(NOT(ISNEW()), ISCHANGED(rstkf__externalid__c) )</errorConditionFormula>
        <errorMessage>External_Id_can_not_be_modified</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>rstkf__Journl_Header_must_not_be_NULL</fullName>
        <active>true</active>
        <description>Journl_Header_must_not_be_NULL</description>
        <errorConditionFormula>ISBLANK(rstkf__gljetempltd_gljetemplth__c)</errorConditionFormula>
        <errorMessage>Please Enter Journal Header</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>rstkf__Line_No_can_not_be_Modified</fullName>
        <active>true</active>
        <description>Line No can not be Modified</description>
        <errorConditionFormula>AND(NOT(ISNEW()), ISCHANGED(rstkf__gljetempltd_lineno__c) )</errorConditionFormula>
        <errorMessage>Line No can not be Modified</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>rstkf__Line_No_can_not_be_Null</fullName>
        <active>true</active>
        <description>Line No can not be Null</description>
        <errorConditionFormula>ISBLANK( TRIM(TEXT(rstkf__gljetempltd_lineno__c)))</errorConditionFormula>
        <errorMessage>Please enter Line No</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>rstkf__Please_enter_valid_Credit_amount</fullName>
        <active>true</active>
        <description>Please enter valid Credit amount</description>
        <errorConditionFormula>OR( AND(NOT(ISBLANK(rstkf__gljetempltd_cramt__c)),NOT(ISNUMBER(TEXT(rstkf__gljetempltd_cramt__c)))),(rstkf__gljetempltd_cramt__c &lt; 0) )</errorConditionFormula>
        <errorMessage>Please enter valid Credit amount</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>rstkf__Please_enter_valid_Debit_amount</fullName>
        <active>true</active>
        <description>Please enter valid Debit amount</description>
        <errorConditionFormula>OR( AND(NOT(ISBLANK(rstkf__gljetempltd_dramt__c)),NOT(ISNUMBER(TEXT(rstkf__gljetempltd_dramt__c)))),(rstkf__gljetempltd_dramt__c &lt; 0) )</errorConditionFormula>
        <errorMessage>Please enter valid Debit amount</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>rstkf__Project_must_be_of_same_Division_of_Gene</fullName>
        <active>true</active>
        <description>Project must be of same Division of General Journal Entry Template Line</description>
        <errorConditionFormula>IF( NOT(ISBLANK(rstkf__gljetempltd_glproj__c)) , rstkf__gljetempltd_glproj__r.rstkf__glproj_gldiv__c != rstkf__gljetempltd_gldiv__c,false)</errorConditionFormula>
        <errorMessage>Project must be of same Division of General Journal Entry Template Line.</errorMessage>
    </validationRules>
</CustomObject>